--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <a href="#">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#https://github.com/ankurnath">
+          <a href="https://github.com/ankurnath">
             <i class="fab fa-github"></i>
           </a>
           <a href="#">
