--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@
         </div>
         <p class="lead mb-5">Write something later</p>
         <div class="social-icons">
-          <a href="#">
+          <!--<a href="#">-- linkedin
             <i class="fab fa-linkedin-in"></i>
-          </a>
+          </a>-->
           <a href="https://github.com/ankurnath">
             <i class="fab fa-github"></i>
           </a>
-          <a href="#">
+        <!--  <a href="#">
             <i class="fab fa-twitter"></i>
-          </a>
-          <a href="#">
+          </a>-->
+          <a href="https://www.facebook.com/ankur.nath.9">
             <i class="fab fa-facebook-f"></i>
           </a>
         </div>
