--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="subheading mb-5">Dhaka,Bangladesh·
           <a href="mailto:name@email.com">ankur.nath777@gmail.com</a>
         </div>
-        <p class="lead mb-5">Write something later</p>
+        <p class="lead mb-5">I am Ankur Nath from Bangladesh. I have completed my B.Sc. from the Department of EEE, Bangladesh University of Engineering and Technology in April 2019 with a CGPA of -3.76/4.00 (Top 10%) </p>
         <div class="social-icons">
           <!--<a href="#">-- linkedin
             <i class="fab fa-linkedin-in"></i>
@@ -80,9 +80,9 @@
         <!--  <a href="#">
             <i class="fab fa-twitter"></i>
           </a>-->
-          <a href="https://www.facebook.com/ankur.nath.9">
+          <!-- <a href="https://www.facebook.com/ankur.nath.9">
             <i class="fab fa-facebook-f"></i>
-          </a>
+          </a> -->
         </div>
       </div>
     </section>
