--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
         <div class="subheading mb-5">Dhaka,Bangladesh·
           <a href="mailto:name@email.com">ankur.nath777@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am Ankur Nath from Bangladesh. I have completed my B.Sc. from the Department of EEE, Bangladesh University of Engineering and Technology in April 2019 with a CGPA of -3.76/4.00 (Top 10%) </p>
+        <p class="lead mb-5">I am Ankur Nath from Bangladesh. I have completed my B.Sc. from the Department of EEE, Bangladesh
+        University of Engineering and Technology in April 2019 with a CGPA of -3.76/4.00 (Top 15%).
+        My research interest falls broadly in computer Vision, machine learning in health data science, deep learning, data Science</p>
         <div class="social-icons">
           <!--<a href="#">-- linkedin
             <i class="fab fa-linkedin-in"></i>
@@ -149,13 +151,13 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
+            <h3 class="mb-0">Bangladesh university of engineering and technology</h3>
             <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+            <div>Electrical and Electronic Engineering </div>
+            <p>GPA: 3.76</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-primary">February 2015 - April 2019</span>
           </div>
         </div>
 
