--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <h3 class="mb-0">Bangladesh university of engineering and technology</h3>
             <div class="subheading mb-3">Bachelor of Science</div>
             <div>Electrical and Electronic Engineering </div>
-            <p>GPA: 3.76</p>
+            <p>CGPA: 3.7/4.00</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">February 2015 - April 2019</span>
@@ -163,12 +163,12 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
+            <h3 class="mb-0">Govt. Science College</h3>
+            <div class="subheading mb-3">Higher Secondary Certificate</div>
+            <p>GPA: 5.00</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
+            <span class="text-primary">2012 - 2014</span>
           </div>
         </div>
 
@@ -182,7 +182,7 @@
         <h2 class="mb-5">Skills</h2>
 
         <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-        <ul class="list-inline dev-icons">
+        <!-- <ul class="list-inline dev-icons">
           <li class="list-inline-item">
             <i class="fab fa-html5"></i>
           </li>
@@ -219,7 +219,11 @@
           <li class="list-inline-item">
             <i class="fab fa-npm"></i>
           </li>
-        </ul>
+        </ul> -->
+        <p class="lead mb-5">I am Ankur Nath from Bangladesh. I have completed my B.Sc. from the Department of EEE, Bangladesh
+        University of Engineering and Technology in April 2019 with a CGPA of -3.76/4.00 (Top 15%).
+        My research interest falls broadly in computer Vision, machine learning in health data science, deep learning, data Science</p>
+
 
         <div class="subheading mb-3">Workflow</div>
         <ul class="fa-ul mb-0">
