--- a/index.html
+++ b/index.html
@@ -220,26 +220,14 @@
             <i class="fab fa-npm"></i>
           </li>
         </ul> -->
-        <p class="lead mb-5">I am Ankur Nath from Bangladesh. I have completed my B.Sc. from the Department of EEE, Bangladesh
-        University of Engineering and Technology in April 2019 with a CGPA of -3.76/4.00 (Top 15%).
-        My research interest falls broadly in computer Vision, machine learning in health data science, deep learning, data Science</p>
+        <p class="lead mb-5">Python , MATLAB, C , C++, Assembly</p>
 
 
-        <div class="subheading mb-3">Workflow</div>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
-        </ul>
+        <div class="subheading mb-3">Machine Learning framework</div>
+        <p class="lead mb-5">Pytorch,Keras</p>
+        <div class="subheading mb-3">Simulation and Design Tools</div>
+        <p class="lead mb-5">OrCAD PSpice, Proteus,emu8086, CYME PSAF,Simulink</p>
+
       </div>
     </section>
 
