--- a/index.html
+++ b/index.html
@@ -225,6 +225,8 @@
 
         <div class="subheading mb-3">Machine Learning framework</div>
         <p class="lead mb-5">Pytorch,Keras</p>
+        <div class="subheading mb-3">Dataset visualization tool</div>
+        <p class="lead mb-5">Seaborn,Matplotlib</p>
         <div class="subheading mb-3">Simulation and Design Tools</div>
         <p class="lead mb-5">OrCAD PSpice, Proteus,emu8086, CYME PSAF,Simulink</p>
 
