--- a/index.html
+++ b/index.html
@@ -1,101 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-
   <title>Ankur Nath</title>
-
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
   <!-- Custom fonts for this template -->
   <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
-
   <!-- Custom styles for this template -->
   <link href="css/resume.min.css" rel="stylesheet">
-
 </head>
-
 <body id="page-top">
-
+  <!-- Navigation-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">Ankur Nath</span>
-      <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
+      <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
       </span>
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#about">About</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#education">Education</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#Undergrad Thesis and Projects">Undergrad Thesis and Projects</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
-        </li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Undergraduate Thesis">Undergraduate Thesis</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Noteworthy Projects">Noteworthy Projects</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#CV">CV</a></li>
       </ul>
     </div>
   </nav>
-
+  <!-- Page Content block Start-->
   <div class="container-fluid p-0">
-
+    <!-- About-->
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
         <h1 class="mb-0">ANKUR
           <span class="text-primary">NATH</span>
         </h1>
         <div class="subheading mb-5">Dhaka,Bangladesh·
-          <a href="mailto:name@email.com">ankur.nath777@gmail.com</a>
+          <a href="mailto:ankurnath777@gmail.com">ankur.nath777@gmail.com</a>
         </div>
         <p class="lead mb-5">I am Ankur Nath from Bangladesh. I have completed my B.Sc. from the Department of EEE, Bangladesh
         University of Engineering and Technology in April 2019 with a CGPA of -3.76/4.00 (Top 15%).
-        My research interest falls broadly in computer Vision, machine learning in health data science, deep learning, data Science</p>
+        My research interest falls broadly in computer vision, machine learning in healthcare,and intelligent systems.</p>
         <div class="social-icons">
-          <!--<a href="#">-- linkedin
-            <i class="fab fa-linkedin-in"></i>
-          </a>-->
-          <a href="https://github.com/ankurnath">
-            <i class="fab fa-github"></i>
-          </a>
-        <!--  <a href="#">
-            <i class="fab fa-twitter"></i>
-          </a>-->
-          <!-- <a href="https://www.facebook.com/ankur.nath.9">
-            <i class="fab fa-facebook-f"></i>
-          </a> -->
+          <a href="https://github.com/ankurnath"><i class="fab fa-github"></i></a>
         </div>
       </div>
     </section>
+    <hr class="m-0"/>
+    <!-- new block-->
 
-    <hr class="m-0">
-
-
-
-    <hr class="m-0">
-
+    <!-- Education-->
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
       <div class="w-100">
         <h2 class="mb-5">Education</h2>
@@ -125,79 +88,63 @@
 
       </div>
     </section>
-
-    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="Undergrad Thesis and Projects">
-      <div class="w-100">
-        <h2 class="mb-5">Undergrad Thesis and Projects</h2>
-
+    <hr class="m-0"/>
+    <!-- Undergraduate Thesis -->
+    <!-- <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="Undergraduate Thesis">
+      <div class="resume-section-content">
+        <h2 class="mb-5">Undergraduate Thesis</h2>
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Undergrad Thesis</h3>
-            <div class="subheading mb-3">PD pattern Detecttion</div>
-            <p>Write something here</p>
+          <div class="flex-grow-1">
+            <h3 class="mb-0">Partial discharge pattern detecttion</h3>
+            <!-- <div class="subheading mb-3">PD pattern Detecttion</div> -->
+            <!-- <p>The goal of my thesis is to  detect partial discharge patterns in signals acquired from medium voltage overhead power lines.
+              I developed a classify  will make it possible to continuously monitor power lines for faults.</p>
           </div>
-
         </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Project 1</h3>
-            <!-- <div class="subheading mb-3">Intelitec Solutions</div> -->
-            <p>blah blah blah</p>
-          </div>
-
-        </div>
-
-
-
       </div>
+    </section> --> -->
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="Undergraduate Thesis">
+      <div class="w-100">
+        <h2 class="mb-5">Undergraduate Thesis</h2>
 
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Partial discharge pattern detecttion</h3>
+            <div class="subheading mb-3"> Medium voltage overhead power lines run for hundreds of miles to supply power to cities. These great distances make it expensive to manually inspect the lines for damage that doesn't immediately lead to a power outage, such as a tree branch hitting the line or a flaw in the insulator. These modes of damage lead to a phenomenon known as partial discharge—an electrical discharge which does not bridge the electrodes between an insulation system completely. This thesis aims to detect partial discharge patterns in voltage signals acquired from  power lines. .</div>
+          </div>
+        </div>
+      </div>
     </section>
-    <hr class="m-0">
+    <hr class="m-0"/>
+     <!-- Noteworthy Projects -->
+      <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="Noteworthy Projects">
+        <div class="w-100">
+          <h2 class="mb-5">Noteworthy Projects</h2>
+          <h4 class="mb-0">Real-Time  Hand Detection and Tracking for controlling Wheelchair</h3>
+         <!-- <div class="subheading mb-3">PD pattern Detecttion</div> -->
+          <p>Put my description </p>
 
+          <h4 class="mb-0">Automated Self Targeting Laser Turret</h3>
+         <!-- <div class="subheading mb-3">PD pattern Detecttion</div> -->
+          <p>Put my description </p>
+
+          <h4 class="mb-0">Optical Character Recognition</h3>
+         <!-- <div class="subheading mb-3">PD pattern Detecttion</div> -->
+          <p>Put my description </p>
+
+          <h4 class="mb-0">Human eye Detection</h3>
+         <!-- <div class="subheading mb-3">PD pattern Detecttion</div> -->
+          <p>Put my description </p>
+        </div>
+      </section>
+    <hr class="m-0"/>
+
+<!-- Skills -->
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
       <div class="w-100">
         <h2 class="mb-5">Skills</h2>
 
         <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-        <!-- <ul class="list-inline dev-icons">
-          <li class="list-inline-item">
-            <i class="fab fa-html5"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-css3-alt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-js-square"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-angular"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-react"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-node-js"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-sass"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-less"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-wordpress"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-gulp"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-grunt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-npm"></i>
-          </li>
-        </ul> -->
         <p class="lead mb-5">Python , MATLAB, C , C++, Assembly</p>
         <div class="subheading mb-3">Machine Learning framework</div>
         <p class="lead mb-5">Pytorch,Keras</p>
@@ -209,53 +156,42 @@
       </div>
     </section>
 
-    <hr class="m-0">
+    <hr class="m-0"/>
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
+    <!-- <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
         <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
         <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
       </div>
-    </section>
+    </section> -->
 
-    <hr class="m-0">
-
+    <!-- <hr class="m-0"> -->
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
         <h2 class="mb-5">Awards &amp; Certifications</h2>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Google Analytics Certified Developer</li>
+             Dean’s List Scholarship, Department of EEE, BUET</li>
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Mobile Web Specialist - Google Certification</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            2<sup>nd</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - James Buchanan High School - Hackathon 2006</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            3<sup>rd</sup>
-            Place - James Buchanan High School - Hackathon 2005</li>
         </ul>
       </div>
     </section>
-
   </div>
+  <hr class="m-0"/>
+
+  <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="CV">
+    <div class="w-100">
+      <h2 class="mb-5">CV</h2>
+      <ul class="fa-ul mb-0">
+        <li>
+          <a href="https://drive.google.com/file/d/10BR3-dAOtAPAUstaG145lARx1r2mvb1s/view?usp=sharing">CV</a>
+        <li>
+      </ul>
+    </div>
+  </section>
+</div>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
