--- a/index.html
+++ b/index.html
@@ -96,7 +96,27 @@
             <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                 <div class="flex-grow-1">
                     <h3 class="mb-0">Partial discharge pattern detecttion</h3>
-                    <div class="subheading mb-3">Medium voltage overhead power lines run for hundreds of miles to supply power to cities. These great distances make it expensive to manually inspect the lines for damage that doesn't immediately lead to a power outage, such as a tree branch hitting the line or a flaw in the insulator. These modes of damage lead to a phenomenon known as partial discharge—an electrical discharge which does not bridge the electrodes between an insulation system completely. This thesis aims to detect partial discharge patterns in voltage signals acquired from  power lines.</div>
+                    <!-- <div class="subheading mb-0"> Partial discharge is an electrical discharge which does not bridge the electrodes
+                      between an insulation system completely.  This thesis aims to detect partial discharge patterns in
+                      voltage signals acquired
+                      from  power lines. This thesis aims to detect partial discharge patterns in voltage signals acquired
+                      from overhead power lines.As these power lines run for hundreds of miles to supply power to cities,it
+                      s really impossible manually inspect the lines for damage that doesn't immediately lead to power outage.
+                      Features are extracted from the spectograms of the voltage signals using CNN and and a phase and frequency level
+                      attention mechanism is employed to accomplish this task.Currently,a class saliency map is being implemented
+                      to find out the discriminative spectrograms regions used by CNN to detect partial discharge patterns.
+                      it will shed light on what frequency bands present in
+                      the signal at a particular time enables the model to detect the partial discharge patterns. </div> -->
+                      <p style="color:brown;font-size:20px;">Partial discharge is an electrical discharge which does not bridge the electrodes
+                        between an insulation system completely.
+                        This thesis aims to detect partial discharge patterns in voltage signals acquired
+                        from overhead power lines.As these power lines run for hundreds of miles to supply power to cities,it
+                        is really impossible manually inspect the lines for damage that doesn't immediately lead to power outage.
+                        Features are extracted from the spectograms of the voltage signals using CNN,and a phase and frequency level
+                        attention mechanism is employed to accomplish this task.Currently,a class saliency map is being implemented
+                        to find out the discriminative spectrograms regions used by CNN to detect partial discharge patterns.
+                        it will shed light on what frequency bands present in
+                        the signal at a particular time enables the model to detect the partial discharge patterns. </p>
                 </div>
 
             </div>
@@ -110,17 +130,17 @@
                  <h2 class="mb-5">Noteworthy Projects</h2>
                  <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                      <div class="flex-grow-1">
-                         <h3 class="mb-0">Real-Time  Hand Detection and Tracking for controlling Wheelchair</h3>
-                         <div class="subheading mb-3">description</div>
+                         <h3 class="mb-0">Real-Time  Hand Detection and Tracking </h3>
+                         <div class="subheading mb-3">Detecting and tracking  multiple hands in real-time</div>
 
                          <h3 class="mb-0">Automated Self Targeting Laser Turret</h3>
-                         <div class="subheading mb-3">description</div>
+                         <div class="subheading mb-3">Design and hardware implementation of a turret that can detect and track intruders</div>
 
                          <h3 class="mb-0">Optical Character Recognition</h3>
-                         <div class="subheading mb-3">description</div>
+                         <div class="subheading mb-3">Distinguish printed text characters inside digital images</div>
 
                          <h3 class="mb-0">Human eye Detection</h3>
-                         <div class="subheading mb-3">description</div>
+                         <div class="subheading mb-3">Detecting the face and eyes of a static image in the frontal plane</div>
 
 
 
@@ -203,7 +223,7 @@
       <h2 class="mb-5">CV</h2>
       <ul class="fa-ul mb-0">
         <li>
-          <a href="https://drive.google.com/file/d/10BR3-dAOtAPAUstaG145lARx1r2mvb1s/view?usp=sharing">CV</a>
+          <a href="https://drive.google.com/file/d/10BR3-dAOtAPAUstaG145lARx1r2mvb1s/view?usp=sharing">PDF</a>
         <li>
       </ul>
     </div>
