--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
 </head>
 <body id="page-top">
   <!-- Navigation-->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+  <nav style="background:#222" class="navbar navbar-expand-lg navbar-dark  fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">Ankur Nath</span>
       <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div  class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#u">Undergraduate Thesis</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Research">Research Experience</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#n">Noteworthy Projects</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
@@ -37,21 +37,21 @@
     </div>
   </nav>
   <!-- Page Content block Start-->
-  <div class="container-fluid p-0">
+  <div style="background:#F5F5F5" class="container-fluid p-0">
     <!-- About-->
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-0">ANKUR
-          <span class="text-primary">NATH</span>
+        <h1 class="mb-0">ANKUR NATH
+          <span class="text-primary"></span>
         </h1>
-        <div class="subheading mb-5">Dhaka,Bangladesh·
-          <a href="mailto:ankurnath777@gmail.com">ankur.nath777@gmail.com</a>
+        <div class="subheading mb-5">Bryan,Texas
+          <a href="mailto:anath@tamu.edu">anath@tamu.edu</a>
         </div>
-        <p class="lead mb-5">I am Ankur Nath from Bangladesh. I have completed my B.Sc. from the Department of EEE, Bangladesh
-        University of Engineering and Technology in April 2019 with a CGPA of -3.76/4.00 (Top 15%).
-        My research interest falls broadly in computer vision, machine learning in healthcare,and intelligent systems.</p>
+        <p class="lead mb-5">I'm Ankur Nath, and I'd like to extend to you a warm welcome to my website. I am now pursuing a Ph.D. in computer science at Texas A&M University, where I am supervised by Dr. Tracy Hammond.
+          My research interests are diverse and include computer vision and intelligent systems development.</p>
         <div class="social-icons">
           <a href="https://github.com/ankurnath"><i class="fab fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/ankur-nath-36047b188/"><i class="fab fa-linkedin"></i></a>
         </div>
       </div>
     </section>
@@ -64,62 +64,51 @@
         <h2 class="mb-5">Education</h2>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+
+          <div class="resume-content">
+            <h3 class="mb-0">Texas A&M University</h3>
+            <div class="subheading mb-3">Doctor of Philosophy</div>
+            <div>Computer Science and Engineering </div>
+            <p>Current GPA: 4 on a scale of 4</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span style="color:black;">August 2021 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+
           <div class="resume-content">
             <h3 class="mb-0">Bangladesh university of engineering and technology</h3>
             <div class="subheading mb-3">Bachelor of Science</div>
             <div>Electrical and Electronic Engineering </div>
-            <p>CGPA: 3.76/4.00</p>
+            <p>CGPA:  3.76 on a scale of 4(top 15%)</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">February 2015 - April 2019</span>
+            <span style="color:black;">February 2015 - April 2019</span>
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">Govt. Science College</h3>
-            <div class="subheading mb-3">Higher Secondary Certificate</div>
-            <p>GPA: 5.00</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">2012 - 2014</span>
-          </div>
-        </div>
+
 
       </div>
     </section>
     <hr class="m-0"/>
     <!-- Undergraduate Thesis -->
-<section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="u">
+<section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="Research">
         <div class="resume-section-content">
-            <h2 class="mb-5">Undergraduate Thesis</h2>
+            <h2 class="mb-5">Research Experience</h2>
             <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                 <div class="flex-grow-1">
-                    <h3 class="mb-0">Partial discharge pattern detecttion</h3>
-                    <!-- <div class="subheading mb-0"> Partial discharge is an electrical discharge which does not bridge the electrodes
-                      between an insulation system completely.  This thesis aims to detect partial discharge patterns in
-                      voltage signals acquired
-                      from  power lines. This thesis aims to detect partial discharge patterns in voltage signals acquired
-                      from overhead power lines.As these power lines run for hundreds of miles to supply power to cities,it
-                      s really impossible manually inspect the lines for damage that doesn't immediately lead to power outage.
-                      Features are extracted from the spectograms of the voltage signals using CNN and and a phase and frequency level
-                      attention mechanism is employed to accomplish this task.Currently,a class saliency map is being implemented
-                      to find out the discriminative spectrograms regions used by CNN to detect partial discharge patterns.
-                      it will shed light on what frequency bands present in
-                      the signal at a particular time enables the model to detect the partial discharge patterns. </div> -->
-                      <p style="color:brown;font-size:20px;">Partial discharge is an electrical discharge which does not bridge the electrodes
-                        between an insulation system completely.
-                        This thesis aims to detect partial discharge patterns in voltage signals acquired
-                        from overhead power lines.As these power lines run for hundreds of miles to supply power to cities,it
-                        is really impossible manually inspect the lines for damage that doesn't immediately lead to power outage.
-                        Features are extracted from the spectograms of the voltage signals using CNN,and a phase and frequency level
-                        attention mechanism is employed to accomplish this task.Currently,a class saliency map is being implemented
-                        to find out the discriminative spectrograms regions used by CNN to detect partial discharge patterns.
-                        it will shed light on what frequency bands present in
-                        the signal at a particular time enables the model to detect the partial discharge patterns. </p>
+                    <h3 class="mb-0">Wearable System for Assisting Users in Finding Lost Objects</h3>
+
+                      <p style="color:black;font-size:20px;">Building a light-weight machine learning model to create a wearable system for assisting users infinding lost objects under supervision of Dr.Tracy
+Hammond , Professor, Texas A&M University</p>
                 </div>
 
             </div>
+
+
         </div>
     </section>
     <hr class="m-0" />
@@ -131,7 +120,8 @@
                  <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                      <div class="flex-grow-1">
                          <h3 class="mb-0">Real-Time  Hand Detection and Tracking </h3>
-                         <div class="subheading mb-3">Detecting and tracking  multiple hands in real-time</div>
+                         <div class="subheading mb-3">A system for controlling the mobility of a wheelchair using real-time
+hand gestures</div>
 
                          <h3 class="mb-0">Automated Self Targeting Laser Turret</h3>
                          <div class="subheading mb-3">Design and hardware implementation of a turret that can detect and track intruders</div>
@@ -152,29 +142,7 @@
          <hr class="m-0" />
 
 
-      <!-- <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="Noteworthy Projects">
-      <div class="resume-section-content">
 
-          <h2 class="mb-5">Noteworthy Projects</h2>
-          <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-          <h4 class="mb-0">Real-Time  Hand Detection and Tracking for controlling Wheelchair</h3>
-         <!-- <div class="subheading mb-3">PD pattern Detecttion</div> -->
-          <!-- <p>Put my description </p>
-
-          <h4 class="mb-0">Automated Self Targeting Laser Turret</h3>
-         <!-- <div class="subheading mb-3">PD pattern Detecttion</div> -->
-          <!-- <p>Put my description </p>
-
-          <h4 class="mb-0">Optical Character Recognition</h3>
-         <!-- <div class="subheading mb-3">PD pattern Detecttion</div> -->
-          <!-- <p>Put my description </p>
-
-          <h4 class="mb-0">Human eye Detection</h3>
-         <!-- <div class="subheading mb-3">PD pattern Detecttion</div> -->
-          <!-- <p>Put my description </p>
-        </div>
-      </section> -->
-    <!-- <hr class="m-0"/> -->
 
 <!-- Skills -->
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
@@ -182,11 +150,13 @@
         <h2 class="mb-5">Skills</h2>
 
         <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-        <p class="lead mb-5">Python , MATLAB, C , C++, Assembly</p>
+        <p class="lead mb-5">Python,C,C++, Assembly,MATLAB</p>
         <div class="subheading mb-3">Machine Learning framework</div>
-        <p class="lead mb-5">Pytorch,Keras</p>
+        <p class="lead mb-5">Pytorch,Keras,Tensorflow</p>
         <div class="subheading mb-3">Dataset visualization tool</div>
-        <p class="lead mb-5">Seaborn,Matplotlib</p>
+        <p class="lead mb-5">Tableau,Seaborn,Matplotlib</p>
+        <div class="subheading mb-3">Web Development</div>
+        <p class="lead mb-5">HTML,CSS,JavaScript</p>
         <div class="subheading mb-3">Simulation and Design Tools</div>
         <p class="lead mb-5">OrCAD PSpice, Proteus,emu8086, CYME PSAF,Simulink</p>
 
@@ -195,13 +165,6 @@
 
     <hr class="m-0"/>
 
-    <!-- <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
-      <div class="w-100">
-        <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
-      </div>
-    </section> -->
 
     <!-- <hr class="m-0"> -->
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
