--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Research">Research Experience</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#n">Noteworthy Projects</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+        <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li> -->
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#CV">CV</a></li>
       </ul>
     </div>
@@ -47,8 +47,8 @@
         <div class="subheading mb-5">Bryan,Texas
           <a href="mailto:anath@tamu.edu">anath@tamu.edu</a>
         </div>
-        <p class="lead mb-5">I'm Ankur Nath, and I'd like to extend to you a warm welcome to my website. I am now pursuing a Ph.D. in computer science at Texas A&M University, where I am supervised by Dr. Tracy Hammond.
-          My research interests are diverse and include computer vision and intelligent systems development.</p>
+        <p style="font-weight: bold;font-size: 18px;">I am a graduate student in the Department of Computer Science at Texas A
+          &M University, skilled in machine learning, specifically in computer vision and reinforcement learning. With a strong foundation in computer science and research experience, I possess an analytical mindset and thrive in team environments. I am eager to apply my skills to develop intelligent systems and make a meaningful impact in the field. </p>
         <div class="social-icons">
           <a href="https://github.com/ankurnath"><i class="fab fa-github"></i></a>
           <a href="https://www.linkedin.com/in/ankur-nath-36047b188/"><i class="fab fa-linkedin"></i></a>
@@ -67,9 +67,11 @@
 
           <div class="resume-content">
             <h3 class="mb-0">Texas A&M University</h3>
-            <div class="subheading mb-3">Doctor of Philosophy</div>
-            <div>Computer Science and Engineering </div>
-            <p>Current GPA: 4 on a scale of 4</p>
+            <div style="font-weight: bold;">Doctor of Philosophy</div>
+            <div style="font-weight: bold;">Computer Science and Engineering </div>
+            <p style="font-weight: bold;">Courses: Artificial Intelligence, Machine Learning, Deep Learning, Deep Reinforcement Learning, Analysis of Algorithms</p>
+            <!-- <p>Current GPA: 4 on a scale of 4</p> -->
+            <p style="font-weight: bold;">Current GPA: <span style="color: gray;">4 on a scale of 4</span></p>
           </div>
           <div class="resume-date text-md-right">
             <span style="color:black;">August 2021 - Present</span>
@@ -80,9 +82,9 @@
 
           <div class="resume-content">
             <h3 class="mb-0">Bangladesh university of engineering and technology</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Electrical and Electronic Engineering </div>
-            <p>CGPA:  3.76 on a scale of 4(top 15%)</p>
+            <div style="font-weight: bold;">Bachelor of Science</div>
+            <div style="font-weight: bold;">Electrical and Electronic Engineering </div>
+            <p style="font-weight: bold;">CGPA:  3.76 on a scale of 4(top 15%)</p>
           </div>
           <div class="resume-date text-md-right">
             <span style="color:black;">February 2015 - April 2019</span>
@@ -102,8 +104,17 @@
                 <div class="flex-grow-1">
                     <h3 class="mb-0">Wearable System for Assisting Users in Finding Lost Objects</h3>
 
-                      <p style="color:black;font-size:20px;">Building a light-weight machine learning model to create a wearable system for assisting users infinding lost objects under supervision of Dr.Tracy
-Hammond , Professor, Texas A&M University</p>
+                      <p style="color:gray;font-size:20px;">Developed a YOLO-based wearable system for item tracking on Android, without the need for trackers. Designed and implemented a lightweight machine-learning model for assisting users in locating items such as keys, wallets, and glasses. Utilized machine learning and computer vision techniques to provide a practical and effective solution.</p>
+                </div>
+
+            </div>
+
+            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="flex-grow-1">
+                    <h3 class="mb-0">FossilSketch: A novel interactive web interface</h3>
+
+                      <p style="color:gray;font-size:20px;">FossilSketch is a web application that teaches geology students important concepts in micropaleontology via various interactive exercises including sketching interactions
+                        under supervision of Dr.Tracy Hammond, Texas A&M University.</p>
                 </div>
 
             </div>
@@ -119,9 +130,28 @@ Hammond , Professor, Texas A&M University</p>
                  <h2 class="mb-5">Noteworthy Projects</h2>
                  <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                      <div class="flex-grow-1">
+                        <h3 class="mb-0">SketchyFace </h3>
+                        <div class="subheading mb-3">Proposed a deep image-to-image translation method that generates high-quality
+                          face images from rough and incomplete freehand sketches</div>
+
+                          <h3 class="mb-0">RST-Style Discourse Parsing</h3>
+                          <div class="subheading mb-3">Incorporated reinforcement learning in discourse parsing to mitigate error propagation in greedy parsers. Presented an A2C agent that learns non-greedy actions by exploring different state configurations,
+                            without relying on gold structure. Conducted experiments with several types of rewards to analyze their effect on the agent's learning.</div>
+
+                            <h3 class="mb-0">Sketch2Algo </h3>
+                            <div class="subheading mb-3">Development of a visualization tool that instructors can use in their classrooms to teach,
+                               explain, and demo machine learning algorithms, and then students can go home and use it to further their understanding</div>
+
+
+                        <h3 class="mb-0">Zlp Scheduler </h3>
+                        <div class="subheading mb-3">Developed an application for Zachary Leadership Program (ZLP) to find a time slot for a lecture that fits the schedules of all students within a
+cohort using an algorithm that finds an open time slot between all schedules</div>
+
+
+
+
                          <h3 class="mb-0">Real-Time  Hand Detection and Tracking </h3>
-                         <div class="subheading mb-3">A system for controlling the mobility of a wheelchair using real-time
-hand gestures</div>
+                         <div class="subheading mb-3">Designed a system using real-time hand gestures to control wheelchair mobility, leveraging the advanced Faster R-CNN with minimal image data.</div>
 
                          <h3 class="mb-0">Automated Self Targeting Laser Turret</h3>
                          <div class="subheading mb-3">Design and hardware implementation of a turret that can detect and track intruders</div>
@@ -149,16 +179,16 @@ hand gestures</div>
       <div class="w-100">
         <h2 class="mb-5">Skills</h2>
 
-        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-        <p class="lead mb-5">Python,C,C++, Assembly,MATLAB</p>
-        <div class="subheading mb-3">Machine Learning framework</div>
+        <div class="subheading mb-0">Programming Languages &amp; Tools</div>
+        <p class="lead mb-5">Python,C,C++,SQL,Ruby,Assembly Language,MATLAB</p>
+        <div class="subheading mb-0">Machine Learning framework</div>
         <p class="lead mb-5">Pytorch,Keras,Tensorflow</p>
-        <div class="subheading mb-3">Dataset visualization tool</div>
+        <div class="subheading mb-0">Dataset visualization tool</div>
         <p class="lead mb-5">Tableau,Seaborn,Matplotlib</p>
-        <div class="subheading mb-3">Web Development</div>
-        <p class="lead mb-5">HTML,CSS,JavaScript</p>
-        <div class="subheading mb-3">Simulation and Design Tools</div>
-        <p class="lead mb-5">OrCAD PSpice, Proteus,emu8086, CYME PSAF,Simulink</p>
+        <div class="subheading mb-0">Web Development</div>
+        <p class="lead mb-5">Node.js, React, HTML, CSS, Dash, Django,Ruby on Rails</p>
+        <!-- <div class="subheading mb-3">Simulation and Design Tools</div>
+        <p class="lead mb-5">OrCAD PSpice, Proteus,emu8086, CYME PSAF,Simulink</p> -->
 
       </div>
     </section>
@@ -167,7 +197,7 @@ hand gestures</div>
 
 
     <!-- <hr class="m-0"> -->
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
+    <!-- <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
         <h2 class="mb-5">Awards &amp; Certifications</h2>
         <ul class="fa-ul mb-0">
@@ -177,7 +207,7 @@ hand gestures</div>
           <li>
         </ul>
       </div>
-    </section>
+    </section> -->
   </div>
   <hr class="m-0"/>
 
@@ -186,7 +216,7 @@ hand gestures</div>
       <h2 class="mb-5">CV</h2>
       <ul class="fa-ul mb-0">
         <li>
-          <a href="https://drive.google.com/file/d/10BR3-dAOtAPAUstaG145lARx1r2mvb1s/view?usp=sharing">PDF</a>
+          <a href="https://drive.google.com/file/d/1dOtaPCuWbdLvUH1Tlq1_gXGrUADtYJEJ/view?usp=sharing">PDF</a>
         <li>
       </ul>
     </div>
